--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,5 @@
 rootProject.name = 'demo'
 include 'analysis_1_compiler'
 include 'analysis_1_sample'
-
+include 'analysis_2_compiler'
+include 'analysis_2_sample'
