--- a/settings.gradle
+++ b/settings.gradle
@@ -4,4 +4,5 @@ include 'analysis_1_sample'
 include 'analysis_2_compiler'
 include 'analysis_2_sample'
 include 'analysis_3'
+include 'generation_1'
 
